@@ -33,7 +33,9 @@ var CloudCommander;
         F2          : 113,
         F3          : 114,
         F4          : 115,
-        F10         : 121
+        F10         : 121,
+        
+        TRA         : 192 /* Typewritten Reverse Apostrophe (`) */
     };
     
     var KEY = cloudcmd.KEY;
@@ -147,7 +149,7 @@ var CloudCommander;
                                 event.preventDefault();//запрет на дальнейшее действие
                     }
                     
-                    else if (event.keyCode === KEY.T && event.altKey){
+                    else if (event.keyCode === KEY.TRA){
                         if(typeof cloudcmd.Terminal === 'function')
                             cloudcmd.Terminal();
                     }                        
