@@ -4,18 +4,20 @@ var CloudCommander, jqconsole;
 (function(){
     var cloudcmd                = CloudCommander;
     var Util                    = CloudCommander.Util;
+    var KeyBinding              = CloudCommander.KeyBinding;
     
     cloudcmd.Terminal           = {};
     
     jqconsole                   = {};
             
-    jqconsole.load              = (function(pParent){
+    jqconsole.load              = (function(){
             Util.cssLoad({
                 src : 'lib/client/terminal/ansi.css'
             });
-        
+            
             Util.jsload('lib/client/terminal/jqconsole-2.7.min.js', function(){
-                pParent.init();
+                jqconsole.init();
+                jqconsole.show();
             });
         });
         
@@ -35,7 +37,9 @@ var CloudCommander, jqconsole;
             console.log('Error. Something went wrong FM not found');
     });
         
-    jqconsole.show              = function(){        
+    jqconsole.show              = function(){
+        Util.hidePanel();
+        
         $(function () {
             var jqconsole = $('#terminal').jqconsole('Hi\n', '>>>');
             var startPrompt = function () {
@@ -48,24 +52,24 @@ var CloudCommander, jqconsole;
                 });
             };
             startPrompt();
-        })();
+        });
     };
         
     
     cloudcmd.Terminal.Keys      = (function(){
         "use strict";
         
-        /* loading js and css of CodeMirror */
-        jqconsole.load(jqconsole);
+        /* loading js and css*/
+        Util.jqueryLoad( jqconsole.load );        
         
-        var key_event=function(event){
+        var key_event = function(event){
     
             /* если клавиши можно обрабатывать */
-            if(cloudcmd.keyBinded){
+            if( KeyBinding.get() ){
                 /* if f4 pressed */
-                if(event.keyCode===114 &&
-                    event.altKey){
-                        jqconsole.show();
+                if(event.keyCode === cloudcmd.KEY.TRA){                    
+                    KeyBinding.unSet();
+                    jqconsole.show();
                 }
             }
         };
