@@ -208,7 +208,6 @@ var CloudCommander, CloudFunc, $;
             var key_event = (function(pEvent){
                 /* если клавиши можно обрабатывать */
                 if( KeyBinding.get() )
-                    /* if f3 pressed */
                     if(pEvent.keyCode === cloudcmd.KEY.F3 &&
                     pEvent.shiftKey){
                         var lCurrentFile = Util.getCurrentFile();
