@@ -56,6 +56,8 @@ Start file is - cloudcmd.js
 * From now right panel would be always shown no matter js enabled or
 disabled in browsers.
 
+* Added plagin terminal ( ` button under TAB).
+
 
 2012.08.24, Version 0.1.6
  
